--- a/ssms/src/main/resources/templates/tpl/theme.html
+++ b/ssms/src/main/resources/templates/tpl/theme.html
@@ -135,15 +135,15 @@
     </div>
 
     <div>
-        <a class="more-menu-item" href="https://whvse.gitee.io/easyweb-html/iframe/" target="_blank">
-            <i class="layui-icon layui-icon-read" style="font-size: 19px;"></i> 开发文档
+        <a class="more-menu-item" href="http://www.hebeinu.edu.cn" target="_blank">
+            <i class="layui-icon layui-icon-read" style="font-size: 19px;"></i>&nbsp;学校官网
         </a>
-        <a class="more-menu-item" href="https://demo.easyweb.vip/pro" target="_blank">
-            <i class="layui-icon layui-icon-tabs" style="font-size: 16px;"></i> &nbsp;单标签版本
+        <a class="more-menu-item" href="https://blog.csdn.net/qq_37394874" target="_blank">
+            <i class="layui-icon layui-icon-fonts-strong" style="font-size: 16px;"></i>&nbsp;作者博客
         </a>
-        <a class="more-menu-item" href="https://demo.easyweb.vip/theme"
+        <a class="more-menu-item" href="https://github.com/zhangguixing/graduation-project/tree/master/"
            target="_blank">
-            <i class="layui-icon layui-icon-theme"></i> 主题生成器
+            <i class="layui-icon layui-icon-fonts-code"></i>&nbsp;GitHub源码
         </a>
     </div>
 
