--- a/ssms/src/main/resources/templates/system/user.html
+++ b/ssms/src/main/resources/templates/system/user.html
@@ -163,6 +163,18 @@
             }
         });
 
+        //监听行点击事件
+        table.on('row(userTable)', function(obj){
+            var data = obj.data;
+            //查看成绩趋势
+            var url = '/score/chartsData2?userId='+data.userId+"&nickName="+data.nickName;
+            top.layui.index.loadView({
+                menuPath: url,
+                menuName: '成绩趋势图'
+            });
+            //标注选中样式
+            obj.tr.addClass('layui-table-click').siblings().removeClass('layui-table-click');
+        });
 
         //加载学院下拉框
         collegeSelect.renderCollegeList();
@@ -356,7 +368,6 @@
             ,accept: 'file' //普通文件
             ,multiple: true
             ,done: function(res){
-                console.log(res);
                 if(res.code == 200){
                     layer.msg(res.msg,{icon:1});
                     admin.getTempData('formOk') && table.reload('userTable');  // 成功刷新表格
@@ -372,7 +383,6 @@
             ,accept: 'file' //普通文件
             ,multiple: true
             ,done: function(res){
-                console.log(res);
                 if(res.code == 200){
                     layer.msg(res.msg,{icon:1});
                     admin.getTempData('formOk') && table.reload('userTable');  // 成功刷新表格
